# histo-test

./: .env.example  .gitignore  AGENTS.md  Neo4J-Histo-Sumary.md  README.md  backup_features_main.py  debug_arch2_pag1.py  debug_pag5_vs_pag12.py  diagnose_arch2_pag1.py  main.py  manual_testing.md  ne4j-histo.py  ne4j-histo_bak.py  package-lock.json  pyproject.toml  server.py  verify_image_index.py
.kiro/specs/conversational-chat/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/improved-image-extraction/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/text-only-queries/: .config.kiro  design.md  requirements.md  tasks.md
client/: app.js  index.html  style.css
core/: agent.py  cli.py  ingestion.py
db/: memory.py  neo4j_client.py
docs/: colab_analysis.md
extractors/: pdf.py  text.py
history/: Neo4J-Histo-Sumary.md  implementation_plan.md  walkthrough.md
models/: classifiers.py  vision.py
monolithic/: backup_server.py  rag_histo_backup.py
notebooks/: GraphRAG_Ingesta_y_CLI.ipynb  RAG_Ingestion_Chat.ipynb  previous_version.ipynb
prompts/: domain_classifier.txt  entity_extractor.txt  memory_summarizer.txt  rag_generation.txt  rag_generation_image.txt  rag_generation_text.txt  topic_extractor.txt  vision_analysis.txt
qdrant_memoria/: meta.json
qdrant_memoria/collection/memoria_histo/: storage.sqlite
tests/: test_extraction.py  test_image_search.py
utils/: config.py  prompt_loader.py  resilience.py
